subiendo ultimos arreglos